alterando para responsivo

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>TecBlog - O seu Blog de tecnologia</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
@@ -28,7 +29,7 @@
 			<div class="postagem">
 				<h2>Titulo da postagem 1</h2>
 				<span class="data-postagem">postado 20 abril 2022</span>
-				<img width="620px" src="imagens/imagem1.jpg">
+				<img src="imagens/imagem1.jpg">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus convallis cursus dignissim. Donec fermentum ut velit et sollicitudin. Fusce in nunc nec urna posuere molestie eget quis nunc. Morbi efficitur, mi accumsan faucibus suscipit, nulla neque imperdiet ligula, eget euismod odio enim sed ipsum. nec dignissim. Curabitur vitae enim sollicitudin, gravida diam nec, varius lacus.
 					
@@ -36,7 +37,7 @@
 			<div class="postagem">
 				<h2>Titulo da postagem 2</h2>
 				<span class="data-postagem">postado 10 abril 2022</span>
-				<img width="620px" src="imagens/imagem2.jpg">
+				<img src="imagens/imagem2.jpg">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus convallis cursus dignissim. Donec fermentum ut velit et sollicitudin. Fusce in nunc nec urna posuere molestie eget quis nunc. Morbi efficitur, mi accumsan faucibus suscipit, nulla neque imperdiet ligula, eget euismod odio enim sed ipsum. nec dignissim. Curabitur vitae enim sollicitudin, gravida diam nec, varius lacus.
 					
@@ -72,11 +73,12 @@
 
 		</div>	
 
-		<div id="rodape">
-			Todos os direitos reservados
-		</div>	
+		
 
 	</div>	
+	<div id="rodape">
+		Todos os direitos reservados
+	</div>
 
 
 </body>
