--- a/celulares.html
+++ b/celulares.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>TecBlog - Celulares</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
@@ -72,10 +73,11 @@
 
 		</div>	
 
-		<div id="rodape">
-			Todos os direitos reservados
-		</div>	
+			
 
+	</div>
+	<div id="rodape">
+		Todos os direitos reservados
 	</div>	
 
 
